<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.udea.santiagoceron.appv0.activity_login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/delivery" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/eEmail"
                android:layout_width="0sp"
                android:layout_weight="3"
                android:layout_height="match_parent"
                android:gravity="center"
                android:hint="@string/email_h"
                android:inputType="textEmailAddress"
                android:textColor="@color/red"
                android:textColorHint="@color/limegreen"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="0sp"
                android:layout_weight="1.3"
                android:layout_height="match_parent"
                android:layout_margin="10sp"
                android:gravity="center"
                android:text="@string/pass"
                android:textColor="@color/primary_text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/ePass"
                android:layout_width="0sp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/pass_h"
                android:inputType="textPersonName"
                android:textColor="@color/red"
                android:textColorHint="@color/limegreen"
                android:textSize="20sp" />
        </LinearLayout>


        <Button
            android:id="@+id/bLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="bLogin"
            android:text="@string/log_in"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkorange"
            android:onClick="bRegister"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</LinearLayout>
